--- a/.gitignore
+++ b/.gitignore
@@ -24,16 +24,7 @@
 /dist/
 /nbdist/
 /.nb-gradle/
-.gitignore
-pool/src/
-pool/target/
-querydsl/src/
-querydsl/target/
-reactive/.mvn/
-reactive/mvnw
-reactive/mvnw.cmd
-redis/target/
-spi/src/test/
-spi/target/
-spring/src/main/
-spring/target/
+
+mvnw
+mvnw.cmd
+
