--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>reactive</module>
         <module>pool</module>
         <module>spring</module>
+        <module>dubbo</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -30,6 +31,7 @@
         <spring-boot.version>2.1.2.RELEASE</spring-boot.version>
         <redisson.version>3.10.0</redisson.version>
         <jedis.version>2.9.0</jedis.version>
+        <dubbo.version>2.7.0</dubbo.version>
         <querydsl.version>4.1.3</querydsl.version>
         <slf4j-log4j12.version>1.6.1</slf4j-log4j12.version>
         <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
@@ -66,6 +68,13 @@
                 <artifactId>slf4j-log4j12</artifactId>
                 <version>${slf4j-log4j12.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo</artifactId>
+                <version>${dubbo.version}</version>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
